--- a/index.html
+++ b/index.html
@@ -5,8 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>HTML Images</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <!-- Your code here -->
+    <div>
+      <h1> Src only</h1>
+      <img class="image" src="image1.jpg"/>
+    </div>
+    <div>
+      <h1> Src plus alt</h1>
+      <img class="image" src="image2.jpg" alt="My company"/>
+    </div>
+    <div>
+      <h1> Src plus alt plus title</h1>
+      <img class="image" src="image3.jpg" alt="My company" title="Blue-horizon"/>
+    </div>
   </body>
 </html>
